--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,5 +1,26 @@
-# Ignore .env file
+# Ignore environment variable files
 .env
 
-# Ignore node_modules directory
+# Ignore dependency folders
 node_modules/
+
+# Ignore log files
+*.log
+
+# Ignore build output
+dist/
+build/
+
+# Ignore temporary files and directories
+tmp/
+temp/
+
+# Ignore IDE configurations
+.vscode/
+
+# Ignore system files
+.DS_Store
+Thumbs.db
+
+# Ignore package-lock.json (optional, depending on your setup)
+package-lock.json
