--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.4",
+    "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "quill": "^2.0.3",
     "react": "^19.0.0",
