--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
+    "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.4",
     "js-cookie": "^3.0.5",
@@ -17,6 +19,7 @@
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.9"
